<resources>
    <string name="app_name">Puerto Galera Dive Sites</string>
    <string name="action_settings">Settings</string>
    <string name="dive_site_title">Dive Sites</string>
    <string name="divesites">Dive Sites</string>
    <string name="facebook_app_id">1385077178457945</string>
    <string name="facebook_connected">Facebook Successfully Connected!</string>
    <string name="facebook_failed_connected">Facebook Did Not Connect!</string>
    <string name="alma_jane_group_id">1453765661593147</string>
    <item name="puerto_galera_latitude" format="float" type="dimen">13.516767</item>
    <item name="puerto_galera_longitude" format="float" type="dimen">120.974821</item>
    <string name="login_desc">Login via Facebook</string>
    <string name="divesite_location">Divesite Location</string>
    <string name="facebook_images">Facebook Images</string>
    <string name="site_description">Site Description</string>
    <string name="depth">Depth</string>
    <string name="distance">Distance</string>
    <string name="continue_without_facebook">Continue without Facebook</string>
    <string name="facebook_fragment_title">Pictures from Blue Ribbon Dive Resort - Puerto Galera</string>
</resources>
