<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo100">

<LinearLayout
        android:orientation="vertical"
              android:layout_width="match_parent"
        android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/videofragment"></FrameLayout>
    <ImageView
        android:id="@+id/divesite_display_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_indego_top"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >

    <TextView
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/depth"
        android:layout_gravity="center"
        android:layout_weight="1"
        style="@style/BlackPrimary"
        android:gravity="center"/>
    <TextView
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/BlackPrimary"
        android:layout_weight="1"
        />
</LinearLayout>
    <LinearLayout
        android:background="@drawable/border_white_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Depth"
        android:gravity="center"
        android:textAlignment="center"
        android:id="@+id/divesite_display_depth"
        style="@style/BlackSecondary"
        android:layout_weight="1"
        android:layout_margin="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance"
        android:id="@+id/divesite_display_distance"
        android:layout_weight="1"
        android:gravity="center"
        style="@style/BlackSecondary"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        />
    </LinearLayout>

    <TextView
        style="@style/BlackPrimary"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/border_indego_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site_description"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:padding="8dp"
        android:id="@+id/site_description"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_white_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Site Description"
        style="@style/BlackSecondary"
        android:id="@+id/divesite_display_description"
        android:paddingLeft="8dp"
        android:nestedScrollingEnabled="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_indego_500"
        android:id="@+id/facebook_section"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook_images"
            android:id="@+id/textView"
            android:textStyle="bold"
            style="@style/BlackPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center_vertical|left"
            android:padding="8dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />



    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:background="@drawable/border_white_bottom"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/horizontal_thumbnail_view"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:padding="5dp"
            android:paddingTop="5dp">

            <LinearLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="left"/>

                <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="right"/>
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="250dp"
                  android:layout_marginLeft="10dp"
                  android:id="@+id/map_container"
                  android:layout_marginRight="10dp"
                  android:layout_marginBottom="10dp"
                  android:layout_marginTop="10dp">

        <TextView
            android:textColor="@color/white"
            android:background="@drawable/border_indego_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divesite_location"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:lines="2"
            style="@style/BlackPrimary"
            android:layout_marginTop="0dp"
            android:padding="8dp"
            android:id="@+id/divesite_location_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:background="@drawable/border_white_bottom">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:layout_width="match_parent"
                      android:layout_height="fill_parent"
                      android:id="@+id/map"
                      android:name="com.google.android.gms.maps.MapFragment"
                      android:layout_margin="5dp"/>

        </LinearLayout>
        </LinearLayout>




</LinearLayout>
    </ScrollView>

